load("@rules_python//python:defs.bzl", "py_test", "py_binary")
load("@python_deps//:requirements.bzl", "requirement")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")


py_proto_library(
    name = "simulation_step_pb2",
    deps = [
        "@mosaic_proto//protos/federate:simulation_step_proto",
    ]
)

py_test(
    name = "proto_text_function_test",
    srcs = ["proto_text_function_test.py"],
    deps = [
        ":simulation_step_pb2",
    ]
)

py_test(
    name = "redis_test",
    srcs = ["redis_test.py"],
    deps = [
        requirement("redis"),
        requirement("async-timeout"),
    ]
)