# BUILD.bazel
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "scenario_control_message_proto",
    srcs = ["scenario_control_message.proto"],
)

proto_library(
    name = "scenario_control_proto",
    srcs = [
        "scenario_control.proto",
    ],
    deps = [
        ":scenario_control_message_proto",
    ],
)

py_proto_library(
    name = "scenario_control_message_pb2",
    deps = [
        ":scenario_control_message_proto",
    ]
)

py_proto_library(
    name = "scenario_control_pb2",
    deps = [
        ":scenario_control_proto",
    ]
)

py_grpc_library(
    name = "scenario_control_pb2_grpc",
    srcs = ["scenario_control_proto"],
    deps = [
        ":scenario_control_pb2",
    ]
)